# convocation-name-slides

./: .gitignore  README.md  main.py  pyproject.toml
convocation/: __init__.py  card.py  config.py  pdf.py  presentation.py  utils.py
