[project]
name = "convocation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "pdf2image>=1.17.0",
    "pillow>=11.3.0",
    "pypdf>=5.9.0",
    "python-pptx>=1.0.2",
    "reportlab>=4.4.3",
]
